--- a/results-summary-component-main/style.scss
+++ b/results-summary-component-main/style.scss
@@ -155,12 +155,13 @@ body {
     .container {
         flex-direction: column;
         box-shadow: none;
+        height: 100%;
         .left {
             border-radius: 0 0 1rem 1rem;
             width: 100%;
             height: 80vh;
             display: flex;
-            align-items: flex-end;
+            // align-items: flex-end;
             justify-content: center;
             margin-bottom: 24px;
 
