--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -21,19 +21,19 @@ body {
   width: 650px;
   height: auto;
   display: flex;
-  box-shadow: 10px 10px 12px hsl(241, 100%, 89%);
+  box-shadow: 10px 10px 12px hsl(241deg, 100%, 89%);
   border-radius: 20px;
 }
 .container .left {
   width: 50%;
   height: auto;
-  background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
+  background: linear-gradient(hsl(252deg, 100%, 67%), hsl(241deg, 81%, 54%));
   border-radius: 20px;
   text-align: center;
   padding: 30px 50px 40px;
 }
 .container .left .left-info h5 {
-  color: hsl(241, 100%, 89%);
+  color: hsl(241deg, 100%, 89%);
   padding-bottom: 30px;
   font-size: 1.3rem;
 }
@@ -41,7 +41,7 @@ body {
   border-radius: 50%;
   width: 170px;
   height: 170px;
-  background: linear-gradient(to top, hsla(241, 72%, 46%, 0), hsl(256, 72%, 46%));
+  background: linear-gradient(to top, hsla(241deg, 72%, 46%, 0), hsl(256deg, 72%, 46%));
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -51,20 +51,20 @@ body {
 .container .left .left-info .percent .big {
   font-size: 3rem;
   font-weight: 800;
-  color: hsl(0, 0%, 100%);
+  color: hsl(0deg, 0%, 100%);
 }
 .container .left .left-info .percent .small {
-  color: hsl(241, 100%, 89%);
+  color: hsl(241deg, 100%, 89%);
 }
 .container .left .left-info h1 {
-  color: hsl(0, 0%, 100%);
+  color: hsl(0deg, 0%, 100%);
   padding-top: 15px;
   font-weight: 500;
   font-size: 1.5rem;
 }
 .container .left .left-info p {
   padding-top: 15px;
-  color: hsl(241, 100%, 89%);
+  color: hsl(241deg, 100%, 89%);
 }
 .container .right {
   width: 50%;
@@ -73,7 +73,7 @@ body {
 }
 .container .right h4 {
   font-size: 1.3rem;
-  color: hsl(240, 60%, 18%);
+  color: hsl(240deg, 60%, 18%);
 }
 .container .right .summary-item {
   list-style: none;
@@ -83,7 +83,7 @@ body {
   background-color: rgba(255, 87, 87, 0.2);
   display: flex;
   justify-content: space-between;
-  color: hsl(0, 100%, 67%);
+  color: hsl(0deg, 100%, 67%);
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 10px;
@@ -93,7 +93,7 @@ body {
   background-color: rgba(255, 176, 31, 0.2);
   display: flex;
   justify-content: space-between;
-  color: hsl(39, 100%, 56%);
+  color: hsl(39deg, 100%, 56%);
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 10px;
@@ -104,7 +104,7 @@ body {
   background-color: rgba(0, 189, 145, 0.2);
   display: flex;
   justify-content: space-between;
-  color: hsl(166, 100%, 37%);
+  color: hsl(166deg, 100%, 37%);
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 10px;
@@ -115,7 +115,7 @@ body {
   background-color: rgba(17, 37, 212, 0.2);
   display: flex;
   justify-content: space-between;
-  color: hsl(234, 85%, 45%);
+  color: hsl(234deg, 85%, 45%);
   padding: 1rem;
   margin: 0.5rem;
   border-radius: 10px;
@@ -129,16 +129,16 @@ body {
   border-radius: 30px;
   cursor: pointer;
   font-size: 1rem;
-  background-color: hsl(240, 60%, 18%);
-  color: hsl(0, 0%, 100%);
+  background-color: hsl(240deg, 60%, 18%);
+  color: hsl(0deg, 0%, 100%);
 }
 .container .right button:hover {
-  background-color: hsl(241, 81%, 54%);
+  background-color: hsl(241deg, 81%, 54%);
 }
 
 @media screen and (max-width: 767px) {
   body {
-    background-color: hsl(0, 0%, 100%);
+    background-color: hsl(0deg, 0%, 100%);
   }
   .container {
     flex-direction: column;
